samples/_failures_safe/1761210750_0ed57f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29adbe44.c: In function ‘main’:
./samples/SAFE/__tmp_29adbe44.c:161:30: error: expected ‘)’ at end of input
  161 |         free_file_data(&input
      |                       ~      ^
      |                              )
./samples/SAFE/__tmp_29adbe44.c:161:9: error: expected declaration or statement at end of input
  161 |         free_file_data(&input
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_29adbe44.c:161:9: error: expected declaration or statement at end of input
